--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body{
-    color: violet;
-    background-color: darkblue;
+    color: black;
+    background-color: greenyellow;
     font-family: 'Turret Road', cursive;
 }
 topnav a:active{
